<resources>
    <string name="app_name">App3_RadioCalc</string>
    <string name="txt_num1">Introduzca el primer valor</string>
    <string name="txt_num2">Introduzca el segundo valor</string>
    <string name="button">Calcular</string>
    <string name="rb_sum">Sumar</string>
    <string name="rb_subtract">Restar</string>
    <string name="rb_multiply">Multiplicar</string>
    <string name="rb_divide">Dividir</string>
    <string name="tv_result">RESULTADO</string>
</resources>