<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_num1"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/txt_num1"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="126dp"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sum" />

        <RadioButton
            android:id="@+id/rb_subtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_subtract" />

        <RadioButton
            android:id="@+id/rb_multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_multiply" />

        <RadioButton
            android:id="@+id/rb_divide"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/rb_divide" />
    </RadioGroup>

    <EditText
        android:id="@+id/txt_num2"
        android:layout_width="233dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_num2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num1" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_result"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="Calculate"
        android:text="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num2" />

</androidx.constraintlayout.widget.ConstraintLayout>